--- a/src/about.njk
+++ b/src/about.njk
@@ -22,7 +22,7 @@ title: About KeymapDB
 
         <p>
         Do you wish to programmatically access the information of the database? This is possible by querying
-        <a href="{{ '/keymaps-metadata.json' | url }}" download>keymapdb.com/keymaps-metadata.json</a>.
+        <a href="{{ '/keymaps_metadata.json' | url }}" download>keymapdb.com/keymaps_metadata.json</a>.
         </p>
         <p>
         Want to add your own keymap to the site? Follow the instructions outlined in “<a href="https://github.com/precondition/keymapdb/blob/main/how_to_submit_a_keymap.md">How to submit a keymap</a>”.
