Remove rogue 'p' in default layout

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -58,7 +58,7 @@
     {%- endif %}
     {# page.url might not be an appropriate value for og:url #}
     <meta property="og:url" content="{{ page.url | url }}"/>
-    <meta property="og:description" content="{{ metaOgDescription }}"/p>
+    <meta property="og:description" content="{{ metaOgDescription }}"/>
     <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
     <link rel="shortcut icon" type="image/svg+xml" href="{{ site.logo }}" sizes="any">
     <link rel="icon" type="image/svg+xml" href="{{ site.logo }}" sizes="any">
