Add a lame cover picture to the home page

--- a/src/index.njk
+++ b/src/index.njk
@@ -6,6 +6,7 @@ pagination:
     size: 1
     alias: paged
 permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.html"
+ogImage: /assets/img/cover.png
 ---
 
 <div class="flex">
