--- a/src/index.njk
+++ b/src/index.njk
@@ -9,20 +9,20 @@ permalink: "{% if paged.number > 1 %}page/{{ paged.number }}/{% endif %}index.ht
 ogImage: /assets/img/cover.png
 ---
 
-<div class="flex">
+<div id="main-screen-container" class="flex">
     {# TODO: find a way for small screen users to use the sidebar.
     Perhaps an extra button in the hamburger menu of the header that 
     would open the sidebar in full-screen with an "Apply" button at 
     the end. #}
-    <aside id="sidebar" class="w-64 mr-11 h-min hidden md:block">
+    <aside id="sidebar" class="w-full md:w-64 mr-11 h-min hidden md:block">
         {% include "partials/sidebar.njk" %}
     </aside>
-    <div class="flex-col w-full">
+    <div id="post-grid-container" class="flex-col w-full md:flex">
         {% set offset =  (paged.number - 1) * site.paginate %}
         <div id="showing-n-results" class="text-center mb-5 mx-auto text-lg text-gray-600">Showing {{ offset + 1 }} to {{ offset + site.paginate }} of {{ collections.posts | length }} results found</div>
         <div id="post-grid">
         {% include "partials/post_grid.njk" %}
-    </div>
+        </div>
     </div>
 </div>
 
