Improve style of "(Reset|Apply) Filters" buttons

--- a/src/index.njk
+++ b/src/index.njk
@@ -10,7 +10,7 @@ ogImage: /assets/img/cover.png
 ---
 
 <div id="main-screen-container" class="flex">
-    <aside id="sidebar" class="w-full md:w-64 mr-11 h-min hidden md:block">
+    <aside id="sidebar" class="w-full md:w-64 md:mr-11 h-min hidden md:block">
         {% include "partials/sidebar.njk" %}
     </aside>
     <div id="post-grid-container" class="flex-col w-full md:flex">
