--- a/src/_includes/partials/post_grid.njk
+++ b/src/_includes/partials/post_grid.njk
@@ -21,15 +21,11 @@
                     <a class="text-gray-900 hover:text-gray-700" href="{{ post.url | url }}">{{ post.data.title }}</a>
                 </div>
                 <div class="my-5 flex flex-wrap justify-between">
-                    <p id="keyLayerCount-table-cell-{{ post.data.fileSlug }}"   class="text-gray-700 mb-1">{{ post.data.keyCount }} keys, {{ post.data.layerCount }} layers</p>
-                    <p id="baseLayouts-table-cell-{{ post.data.fileSlug }}"  class="text-gray-700 mb-1 break-words">{{ post.data.baseLayouts.join(", ") }}</p>
-                    <div class="flexitems-break"></div>
+                    <p id="keyCount-table-cell-{{ post.data.fileSlug }}"   class="text-gray-700 mb-1">{{ post.data.keyCount }} keys</p>
                     <p id="languages-table-cell-{{ post.data.fileSlug }}"  class="text-gray-700 mb-1 break-words">{{ post.data.languages.join(", ") }}</p>
-                    <p id="OS-table-cell-{{ post.data.fileSlug }}"         class="text-gray-700 mb-1 break-words">
-                        {% for osName in post.data.OS %}
-                            {% include "./../../assets/svg/OS/" + osName + ".svg" %}
-                        {%- endfor %}
-                    </p>
+                    <div class="flexitems-break"></div>
+                    <p id="layerCount-table-cell-{{ post.data.layerCount }}" class="text-gray-700 mb-1">{{ post.data.layerCount }} layers</p>
+                    <p id="baseLayouts-table-cell-{{ post.data.fileSlug }}"  class="text-gray-700 mb-1 break-words">{{ post.data.baseLayouts.join(", ") }}</p>
                 </div>
                 {% if post.data.summary -%}
                     <p>{{ post.data.summary }}</p>
