Add check/cross marks to Yes/No

--- a/src/_includes/layouts/keymapdb_entry.njk
+++ b/src/_includes/layouts/keymapdb_entry.njk
@@ -10,9 +10,9 @@ keybindings: []
 
 {% macro booleanToYesNo(bool) %}
 {%- if bool -%}
-    Yes
+    Yes ✅
 {%- else -%}
-    No
+    No ❌
 {%- endif -%}
 {% endmacro %}
 
