Base layout -> Base layout family

--- a/src/_includes/partials/sidebar.njk
+++ b/src/_includes/partials/sidebar.njk
@@ -30,7 +30,7 @@
 
 <fieldset class="mb-3 xl:w-96">
     <legend class="form-check-label inline-block text-gray-800" id="baseLayoutSelectionLegend">
-      Base layout
+      Base layout family
     </legend>
     <select id="baseLayoutSelection" name="baseLayouts" onchange="updatePostGrid(this)" class="keymap-filter form-select
       block
