Fix canonical links in pages

--- a/src/_includes/layouts/default.njk
+++ b/src/_includes/layouts/default.njk
@@ -54,7 +54,7 @@
     <meta property="og:url" content="{{ page.url | url }}"/>
     <meta property="og:description" content="{{ metaDesc }}"/>
     <meta property="twitter:description" content="{{ metaDesc }}"/>
-    <link rel="canonical" href="{{ site.url | url }}{{ page.url }}">
+    <link rel="canonical" href="{{ page.url }}">
     <link rel="shortcut icon" type="image/svg+xml" href="{{ site.logo }}" sizes="any">
     <link rel="icon" type="image/svg+xml" href="{{ site.logo }}" sizes="any">
     <link rel="apple-touch-icon" href="{{ '/assets/img/apple-touch-icon.png' | url }}">
