Link to Letter Layout DB instead of Keyboard Design Gallery

--- a/src/about.njk
+++ b/src/about.njk
@@ -15,7 +15,7 @@ title: About KeymapDB
             KeymapDB is NOT:
             <ul>
                 <li>A collection of alpha keyboard layouts (Colemak, Dvorak, AZERTY, BEAKL, …). 
-                    Better luck in the “<a href="https://www.keyboard-design.com/best-layouts.html" class="font-medium">Keyboard Design Gallery</a>”.</li>
+                    Better luck in the “<a href="https://www.keyboard-design.com/internet-letter-layout-db.html" class="font-medium">Internet Letter Layout DB (ILLDB)</a>”.</li>
                 <li>A collection of mechanical keyboards. Visit <a href="https://mechdb.net/keyboards/" class="font-medium">MechDB</a> if that's what you want.</li>
             </ul>
         </p>
