Replace copyright symbol in footer by reversed copyright symbol (faux copyleft)

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,6 +1,7 @@
 <footer class="mt-20 px-10 py-8 bg-gray-200">
     <div class="max-w-5xl mx-auto text-gray-700 text-center">
-        © 2023 <a href="{{ '/' | url }}" class="font-medium" target="_blank" rel="noopener noreferrer">{{ site.title }}</a>.
+        <copyleft title="Copyleft" aria-label="Copyleft"></copyleft>
+        2023 <a href="{{ '/' | url }}" class="font-medium" target="_blank" rel="noopener noreferrer">{{ site.title }}</a>.
         Made by <a href="{{ maintainer.homepage | url }}" target="_blank" rel="noopener noreferrer">{{ maintainer.name }}</a>
         using <a href="https://www.11ty.dev" target="_blank" rel="noopener noreferrer">Eleventy</a> and <a href="https://tailwindcss.com" target="_blank" rel="noopener noreferrer">Tailwind CSS</a>.
     </div>
