--- a/src/404.njk
+++ b/src/404.njk
@@ -9,7 +9,7 @@ permalink: 404.html
     <div class="mt-5 md:mt-0 text-center md:text-left text-gray-800">
         <h1 class="text-6xl font-medium mt-2 mb-5">404</h1>
         <h2 class="text-2xl text-gray-800 font-medium leading-snug mb-3 mt-0">Oops! It seems you are lost</h2>
-        <p class="mb-4 md:mb-3 text-gray-600">The page you're looking for might have been removed had its name changed or is temporarily unavailable.</p>
+        <p class="mb-4 md:mb-3 text-gray-600">The page you're looking for might have been removed, had its name changed or is temporarily unavailable.</p>
         <a href="{{ '/' | url }}" class="text-teal-600 font-semibold">Return to homepage</a>
     </div>
 </div>
