Add an `alt` tag to the `img` tag of the logo in the header

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -2,7 +2,7 @@
     <div class="mx-auto flex items-center flex-wrap justify-between">
         <div class="sm:mr-8">
             <a class="flex items-center" href="{{ '/' | url }}">
-                <img src="{{ site.logo }}" class="max-h-10 mr-2">
+                <img src="{{ site.logo }}" class="max-h-10 mr-2" alt="Logo (Treasure map on a keycap)">
                 <span class="text-xl text-teal-700 font-semibold self-center">{{ site.title }}</span>
             </a>
         </div>
